traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:4: error: '=' expected but ';' found.
  val X=getMondeLargeur()
^