traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var x=0
  var y=0
  var compteur
  val X=getMondeLargeur()
  val Y=getMondeHauteur()
  while (x!=X){
  	while (y!=Y){
    	ecritMessage(compteur)
      compteur = compteur + 1
      y = y + 1
    	setPos(x,y)
  	}
    y=0
    x=x+1
    setPos(x,y)
  }
}